Bug 368256 - Python import does not import object references correctly
Summary: Python import does not import object references correctly
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.20.1 (KDE Applications 16.08.1)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-05 08:32 UTC by Ralf Habacker
Modified: 2016-09-06 19:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.20.2 (KDE Applications 16.08.2)
Sentry Crash Report:


Attachments
testcase (142 bytes, text/x-python)
2016-09-05 08:33 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-09-05 08:32:59 UTC
On importing python code variables containing a reference to an object umbrello do not set the related variable as type 'object'.


Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. switch active language to python
3. import appended test case

Actual Results:  
umbrello asks for a class name as type for the imported attribute

Expected Results:  
umbrello should use type 'object' for the imported variables
Comment 1 Ralf Habacker 2016-09-05 08:33:42 UTC
Created attachment 100932 [details]
testcase
Comment 2 Ralf Habacker 2016-09-05 08:35:36 UTC
Git commit 6b9cdff4d2b1ea0085d6fbfe59265e52a802aafd by Ralf Habacker.
Committed on 05/09/2016 at 08:35.
Pushed by habacker into branch 'Applications/16.08'.

Fix 'Python import do not import object references correctly'.

On import python variables use type 'object' for any initializer
not matching any basic type.
FIXED-IN:2.20.2 (KDE Applications 16.08.2)

M  +2    -1    test/import/python/types.py
M  +2    -0    umbrello/codeimport/pythonimport.cpp

http://commits.kde.org/umbrello/6b9cdff4d2b1ea0085d6fbfe59265e52a802aafd