Fix 'Python import do not import object references correctly'.

On import python variables use type 'object' for any initializer
not matching any basic type.

BUG:368256
FIXED-IN:2.20.2 (KDE Applications 16.08.2)